@@ -20,6 +20,7 @@
   [#8961] Update test script for new simulavr and library layout
   [#8964] Update tests isinf-01.c, signbit-01.c and modf-np.c
   [#9163] New eeprom write block function for xmega using eeprom page write
+  [#8729] [avr/interrupt.h] Add ISR_NOICF, ISR_FLATTEN. Fix namespace of identifiers.
 
 * Other changes:
 
